-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
None
-
Affects Version/s: repo-panama
-
Component/s: tools
-
generic
-
generic
On Windows and Mac, default lookup allows looking up symbols from any loaded library in the process. On Linux, it does not work that way. We need a stable, portable solution for default lookup.
One of the main reasons for default lookup is to allow uses to use standard C runtime library functions (from stdlib.h, stdio.h, math.h etc.) without having to load platform specific C runtime library / libraries.
Instead of fixing default lookup alone, foreign library loading is going to be revisited as documented in
https://mail.openjdk.java.net/pipermail/panama-dev/2021-April/013577.html
We plan to use the current bug for library loading changes.
One of the main reasons for default lookup is to allow uses to use standard C runtime library functions (from stdlib.h, stdio.h, math.h etc.) without having to load platform specific C runtime library / libraries.
Instead of fixing default lookup alone, foreign library loading is going to be revisited as documented in
https://mail.openjdk.java.net/pipermail/panama-dev/2021-April/013577.html
We plan to use the current bug for library loading changes.
- is blocked by
-
JDK-8266627 CLinker allocateMemory, freeMemory implementation should not use default lookup
-
- Resolved
-
- relates to
-
JDK-8266682 sync jextract for LibraryLookup removal
-
- Resolved
-
-
JDK-8262126 LibraryLookup should lookup libraries in system specific folders
-
- Closed
-