8265222: default lookup is broken